--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     * {
       padding: 0px;
       margin: 0px;
-      height: 100%;
-      max-height: 100%;
+      /* height: 100%;
+      max-height: 100%; */
     }
   </style>
 </head>
